# libstempo

./: .flake8  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  install_tempo2.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci_tests.yml  release-conda.yaml
conda/: conda_build_config.yaml  meta.yaml
demo/: libstempo-demo.ipynb  libstempo-toasim-demo.ipynb
libstempo/: __init__.py  _find_tempo2.py
libstempo/testing/: context.py  test_libstempo.py
tests/: test_pulsar.py
