[tool.black]
line-length = 120
target_version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | _build
    | buck-out
    | build
    | dist
    | docs
    | venv
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = [
    "setuptools",
    "cython>=0.22",
    "numpy>=1.15.0",
]
build-backend = "setuptools.build_meta"